figure will be unactive if we click on different figure

--- a/SFMLGame.vcxproj.filters
+++ b/SFMLGame.vcxproj.filters
@@ -21,9 +21,21 @@
     <ClCompile Include="Field.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Figure.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="meleeGroundMech.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Field.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Figure.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="meleeGroundMech.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
