--- a/SFMLGame.vcxproj
+++ b/SFMLGame.vcxproj
@@ -141,6 +141,7 @@
     <ClCompile Include="enemyGround.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="meleeGroundMech.cpp" />
+    <ClCompile Include="rangedGroundMech.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Building.h" />
@@ -148,6 +149,7 @@
     <ClInclude Include="Figure.h" />
     <ClInclude Include="enemyGround.h" />
     <ClInclude Include="meleeGroundMech.h" />
+    <ClInclude Include="rangedGroundMech.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
