--- a/SFMLGame.vcxproj.filters
+++ b/SFMLGame.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="Building.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="rangedGroundMech.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Field.h">
@@ -48,6 +51,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Building.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="rangedGroundMech.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
